[package]
name = "wasm_allocator"
version = "0.1.1"
authors = ["W-Mai <1341398182@qq.com>"]
edition = "2021"
build = "build.rs"
categories = ["wasm", "no-std", "allocator", "memory-management"]
description = "A tiny wasm allocator for no_std"
license = "MIT"
repository = "https://github.com/W-Mai/wasm_allocator"

[features]

[dependencies]

[profile.dev]
panic = "abort" # 禁用panic时栈展开

[profile.release]
panic = "abort" # 禁用panic时栈展开
opt-level = "s"
